fixed layout issues shop-item page after making the slider

--- a/src/scss/layout/_main.scss
+++ b/src/scss/layout/_main.scss
@@ -641,6 +641,9 @@
       font-size: 10px;
     }
   }
+  &__meta {
+    margin-bottom: 50px;
+  }
   &__visual {
     width: 100%;
     height: 100%;
@@ -690,6 +693,9 @@
     &__item.is-being-displayed {
       opacity: 0.7;
     }
+  }
+  &__article, &__text {
+    padding: 0 5%;
   }
   &__article {
     margin: 50px 0;
